# mob

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  TODO  TODO.md  data  flake.nix  justfile  rust-toolchain.toml  state.uml
.github/workflows/: cd.yml  ci.yml  release.yml
assets/: graph.afdesign  logo.afdesign
src/: command.rs  config.rs  duration.rs  emoji_logger.rs  git.rs  git2.rs  lib.rs  main.rs  prompt.rs  session.rs  settings.rs  store.rs  test.rs  timer.rs
src/cmd/: done.rs  mod.rs  next.rs  order.rs  start.rs  status.rs
src/config/: mob.rs  mod.rs  settings.rs  state.rs
src/fetch/: mod.rs
src/git/: mod.rs  store.rs
src/os/: unix.rs  windows.rs
src/session/: branches.rs  drivers.rs  mod.rs  session.rs  session_store.rs  session_v0.rs  settings.rs  settings_v0.rs  state.rs  state_v0.rs  versioned_session.rs
tests/integration/: fixtures.rs  mod.rs  workflow_tests.rs
