[package]
name = "remotemob"
version = "1.2.1"
authors = ["Paul Diaconescu <p@afajl.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["cli"]
homepage = "https://github.com/afajl/mob"
readme = "README.md"
description = """
Console tool for streamlining remote mobbing
"""
include = ["src/**/*", "README.md"]

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = "z"

[[bin]]
name = "mob"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.5.0"
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.3"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
dialoguer = "0.10"
console = "0.15"
git2 = { version = "0.17", default_features = false }
whoami = "1.2"
directories = "5.0"
which = "4.2"
