[package]
name = "remotemob"
version = "1.3.0"
authors = ["Paul Diaconescu <p@afajl.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
categories = ["command-line-utilities"]
keywords = ["cli"]
repository = "https://github.com/afajl/mob"
readme = "README.md"
description = """
Console tool for streamlining remote mobbing
"""
include = ["src/**/*", "README.md"]

[profile.release]
strip = "symbols"
lto = "thin"
opt-level = "z"

[[bin]]
name = "mob"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
confy = "2.0.0"
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.3"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
env_logger = "0.11"
dialoguer = "0.12"
console = "0.16"
whoami = "2.1"
directories = "6.0"
which = "8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
